# scmi-compiler

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.d471e0d  LICENSE  code.sc  lexer.cpp  lexer.hpp  limitations.txt  main.cpp  output.mi  output.txt  run.bat  run.sh  stdlib.sc  string.sc  syntax.txt  test.sc  tokens.hpp  tokens.txt
source/: CMakeLists.txt  Keyword.hpp  analyzer.cpp  analyzer.hpp  ast.h  compiler.cpp  compiler.hpp  generator.cpp  generator.hpp  lexer.cpp  lexer.hpp  limitations.txt  main.cpp  parser.cpp  parser.hpp  rewriter.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  token.cpp  token.hpp  tokens.cpp  tokens.hpp
source_output/: CMakeLists.txt  main.cpp
